syntax = "proto3";

package protobasics06;

option java_multiple_files = true;
option java_package = "com.playground.models.protobasics06";

/*
  Server emits 1-100 very fast.
  Want to control the rate in which server emits based on the client's processing speed (vice versa).
  This process is called back-pressure handling / flow control
 */

message Output {
  int32 value = 1;
}

message RequestSize {
  int32 size = 1;
}

service FlowControlService {
  rpc GetMessages(stream RequestSize) returns (stream Output);
}